# tunaLlama

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  INSTALL.md  LICENSE  README.en.md  README.md  config.example.toml  mise.toml  pyproject.toml
.claude-plugin/: marketplace.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: dogfooding-log.md  handoff-tunallama-phase1.md  internals.md  workflow.md
docs/measurements/: README.md  methodology.md  phase4-search.md  phase5-hyde-kure.md  phase5e-corpus-scaling.md  phase7-context-boost.md  phase7-mcp-audit.md
docs/release-notes/: v0.3.0.md  v0.4.0.md  v0.5.0.md  v0.5.1.md  v0.5.2.md  v0.5.3.md  v0.5.4.md  v0.5.5.md  v0.5.6.md  v0.5.7.md  v0.5.8.md  v0.5.9.md  v0.6.0.md  v0.6.1.md
docs/specs/: iso_datetime_parser.md  phase10_redis_multisession.md  phase2_graph_edges.md  phase2_hybrid_rrf.md  phase2_vector_recall.md  phase3_semantic_edges.md  phase3_synonym_seed.md  phase4_context_pollution.md  phase4_extended_seed_metrics.md  phase4_lopo_measurement.md  phase5_1_seed_dogfooding.md  phase5_1_seed_expansion.md  phase5_2_variance_reduction.md  phase5_3_crosstask_pollution.md  phase5_4_token_measurement.md  phase5_roadmap.md  phase6_memory_layer.md  phase7_2_context_boost.md  phase8_codex.md  phase9_ollama_embedding.md
plugin/: .mcp.json  _adapters.py  _format.py  _state.py  mcp_server.py
plugin/.claude-plugin/: plugin.json
plugin/agents/: tuna-developer.md  tuna-developer.toml
plugin/hooks/: hooks.json  pre_tool_use.py  session_start.py
plugin/skills/delegate-to-ollama/: SKILL.md
tests/core/: conftest.py  test_cli_doctor.py  test_cli_init.py  test_cli_metrics.py  test_cli_state.py  test_config_loader.py  test_config_models.py  test_delegation_code.py  test_delegation_files.py  test_delegation_runner.py  test_errors.py  test_llm_base.py  test_llm_factory.py  test_llm_lmstudio.py  test_llm_ollama.py  test_measurement_ast_smell.py  test_measurement_mcp_size.py  test_measurement_memory_metrics.py  test_measurement_organic.py  test_memory_adaptive.py  test_memory_diff_learn.py  test_memory_extract.py  test_memory_graph.py  test_memory_hybrid.py  test_memory_hyde.py  test_memory_metrics.py  test_memory_mmr.py  test_memory_normalization.py  test_memory_query_expansion.py  test_memory_reranker.py  test_memory_search.py  test_memory_semantic_edges.py  test_memory_state.py  test_memory_store.py  test_memory_tiered.py  test_memory_tokenize.py  test_memory_vector.py  test_public_api.py  test_routing.py  test_workflow_dev_review.py  (+2 more)
tests/integration/: test_context_pollution.py  test_phase5_2_variance.py  test_phase5_2c_hyde_pool.py  test_phase5_2d_mmr.py  test_phase5_3_crosstask_pollution.py  test_phase5_d_adaptive.py  test_phase7_2_context_boost.py  test_search_quality.py  test_search_quality_extended.py  test_search_quality_lopo.py  test_search_quality_lopo_1k.py  test_search_quality_lopo_500.py  test_search_quality_synonym.py
tests/integration/archive/: README.md
tests/integration/seeds/: extended_1k.py  extended_500.py  phase7_probes.py
tests/plugin/: conftest.py  test_format.py  test_hook_session_start.py  test_hooks.py  test_manifest.py  test_mcp_tools.py  test_state.py
tunallama_core/: __init__.py  errors.py  routing.py
tunallama_core/cli/: __init__.py  doctor_cmd.py  init_cmd.py  main.py  metrics_cmd.py  state_cmd.py
tunallama_core/config/: __init__.py  loader.py  models.py
tunallama_core/delegation/: __init__.py  _prompts.py  _runner.py  code.py  files.py
tunallama_core/llm/: __init__.py  base.py  factory.py  lmstudio.py  ollama.py
tunallama_core/measurement/: __init__.py  ast_smell.py  mcp_size.py  memory_metrics.py  organic.py  token_count.py
tunallama_core/memory/: __init__.py  adaptive.py  diff_learn.py  extract.py  graph.py  hyde.py  metrics.py  mmr.py  normalization.py  query_expansion.py  reranker.py  schema.sql  search.py  semantic_edges.py  state.py  store.py  tiered.py  tokenize.py  vector.py
tunallama_core/workflow/: __init__.py  dev_review.py  limitations.py  spec.py
