[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tunallama"
version = "0.1.0.dev0"
description = "Delegate heavy code generation to a local LLM (Ollama / LM Studio). Save tokens, keep oversight."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "hang-in" }]
keywords = ["claude-code", "ollama", "lmstudio", "mcp", "code-generation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "ollama>=0.4.0",
    "httpx>=0.27.0",
    "mcp>=1.0.0",
    "kiwipiepy>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.6.0",
]

[project.urls]
Homepage = "https://github.com/hang-in/tunaLlama"
Issues = "https://github.com/hang-in/tunaLlama/issues"

[project.scripts]
tunallama = "tunallama_core.cli.main:run"

[tool.hatch.build.targets.wheel]
packages = ["tunallama_core"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--strict-markers --cov=tunallama_core --cov=plugin --cov-report=term-missing --cov-report=xml"
markers = [
    "integration: requires running external services (Ollama at :11434, LM Studio at :1234). Auto-skipped when service is unavailable.",
]

[tool.coverage.run]
branch = true
omit = [
    "tests/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
]
