[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tunallama"
version = "0.4.0"
description = "Delegate heavy code generation to a local LLM (Ollama / LM Studio). Memory layer (state.md auto-load + decision extraction + diff-based learning) for project context."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "hang-in" }]
keywords = ["claude-code", "ollama", "lmstudio", "mcp", "code-generation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "ollama>=0.4.0",
    "httpx>=0.27.0",
    "mcp>=1.0.0",
    "kiwipiepy>=0.20.0",
    "python-dotenv>=1.0.0",
    # Phase 2 — semantic recall
    "sentence-transformers>=3.0",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.6.0",
]

[project.urls]
Homepage = "https://github.com/hang-in/tunaLlama"
Issues = "https://github.com/hang-in/tunaLlama/issues"

[project.scripts]
tunallama = "tunallama_core.cli.main:run"

[tool.hatch.build.targets.wheel]
packages = ["tunallama_core"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--strict-markers --cov=tunallama_core --cov=plugin --cov-report=term-missing --cov-report=xml"
markers = [
    "integration: requires running external services (Ollama at :11434, LM Studio at :1234). Auto-skipped when service is unavailable.",
    "search_quality: downloads BGE-M3 (~1GB) and measures BM25 / vector / hybrid recall on a seed dataset. Slow first run (~2 min). Run with `pytest -m search_quality` or include via `pytest -m 'integration or search_quality'`.",
]

[tool.coverage.run]
branch = true
omit = [
    "tests/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
]
