[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tunallama"
version = "0.5.9"
description = "Delegate heavy code generation to a local LLM (Ollama / LM Studio). Search + memory layer + Codex CLI compatibility (one repo / two environments)."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "hang-in" }]
keywords = ["claude-code", "ollama", "lmstudio", "mcp", "code-generation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "ollama>=0.4.0",
    "httpx>=0.27.0",
    "mcp>=1.0.0",
    "kiwipiepy>=0.20.0",
    "python-dotenv>=1.0.0",
    # Phase 2/9 — semantic recall. 임베딩은 Ollama /api/embed (torch 불필요).
    "numpy>=1.26",
]

[project.optional-dependencies]
# Phase 9: cross-encoder reranker 는 sentence-transformers(torch) 필요 → 옵셔널.
# 미설치 시 search.py 가 top-k 로 graceful degrade. 코어는 torch-free.
rerank = ["sentence-transformers>=3.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.6.0",
    "sentence-transformers>=3.0",  # reranker 테스트용
]

[project.urls]
Homepage = "https://github.com/hang-in/tunaLlama"
Issues = "https://github.com/hang-in/tunaLlama/issues"

[project.scripts]
tunallama = "tunallama_core.cli.main:run"

[tool.hatch.build.targets.wheel]
packages = ["tunallama_core"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# 측정 스크립트의 compact aggregation (semicolon statement) 허용.
extend-ignore = ["E702"]
[tool.ruff.lint.per-file-ignores]
"tests/integration/*" = ["E702"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
# archive/ - abandoned / superseded 측정 (Phase 4-4, MMR). 정직 보존, 자동 실행 X.
addopts = "--strict-markers --cov=tunallama_core --cov=plugin --cov-report=term-missing --cov-report=xml --ignore=tests/integration/archive"
markers = [
    "integration: requires running external services (Ollama at :11434, LM Studio at :1234). Auto-skipped when service is unavailable.",
    "search_quality: downloads BGE-M3 (~1GB) and measures BM25 / vector / hybrid recall on a seed dataset. Slow first run (~2 min). Run with `pytest -m search_quality` or include via `pytest -m 'integration or search_quality'`.",
]

[tool.coverage.run]
branch = true
omit = [
    "tests/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
]
